# rpi2040_test

./: CMakeLists.txt  setsdk.sh
blink/: blink.c
blinkslow/: CMakeLists.txt  blinkslow.c  blinkslow.cpp
multicore/: CMakeLists.txt  multicore.c
prime_multicore/: CMakeLists.txt  prime_multicore.c
